== 0.X.Y 2007-06-02

* 1 minor enhancement
  * Added 'email.txt' to the CLEAN list to be removed on 'rake clean'
* 1 website enhancement
  * Refreshed the example output as its a big old (CHANGELOG -> History.txt)
  
== 0.10.4 2007-06-02

* 2 minor enhancement
  * website_upload now ignores .svn files [Thx Jeroen Janssen]
  * website/index.txt includes link to "8 steps to fix other ppls code" and a default svn URL
* 1 website enhancement
  * Link to "Beginning Ruby" as it features this gem [Thx Peter Cooper for the plug] - its an affiliate amazon link so I can make $$$ and retire to Fiji

== 0.10.3 2007-05-25

* 1 major enhancement
  * rspec test framework now works via 'spec' task [Jeroen Janssen]
* 3 minor improvement
  * For rspec gems, default task => spec task
  * Generated rakefile checks for existance of rspec gem else shows how to get it
  * The require statement in the lib/<gemname>.rb file now uses lowercase project name [Jeroen Janssen]
    
== 0.10.2 2007-05-25

* 3 major enhancements
  * Generated Rakefile only attempts to discover username from ~/.rubyforge/user-config.yml when its required [thx Jeroen Janssen]
  * Helpful error message produced if 'rubyforge setup' never run
  * Fixed the REV algorithm for subversion [thx Robert Berger]
* 2 minor enhancement
  * Copied index.txt into README.txt - it looks crap, but at least there is content
  * Generated Rakefile was missing a \

== 0.10.1 2007-05-24

* 4 minor enhancements
  * Fixed the generation of test files in the manifest
  * Generated rakefile#deploy prompts user to do svn tag
  * Renamed README -> README.txt to conform to new hoe change
  * Changed History.txt markup (+++ => ==; + => *) [Thx Jeroen Janssen]
* 1 dependency update:
  * Hoe 1.2.1
* Still being worked on:
  * Gems using rspec include a #spec task to run all spec tests; currently tests aren't working.
  
== 0.10.0 2007-05-19

* 3 major enhancements