@@ -32,7 +32,7 @@
 
     <h1><%= title %></h1>
     <div id="version" class="clickable" onclick='document.location = "<%= download %>"; return false'>
-      Get Version
+      <p>Get Version</p>
       <a href="<%= download %>" class="numbers"><%= version %></a>
     </div>
     <%= body %>
