@@ -31,7 +31,7 @@
 <div id="main">
 
     <h1>New Gem Generator</h1>
-    <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/newgem"; return true'>
+    <div id="version"> <!--  class="clickable" onclick='document.location = "http://rubyforge.org/projects/newgem"; return true' -->
       <p>Get Version</p>
       <a href="http://rubyforge.org/projects/newgem" class="numbers">0.10.4</a>
       <p>Featured in</p>
