@@ -31,7 +31,7 @@
 <div id="main">
 
     <h1><%= title %></h1>
-    <div id="version" class="clickable" onclick='document.location = "<%= download %>"; return true'>
+    <div id="version"> <!--  class="clickable" onclick='document.location = "<%= download %>"; return true' -->
       <p>Get Version</p>
       <a href="<%= download %>" class="numbers"><%= version %></a>
       <p>Featured in</p>
